Fixes Navbar Scaling image cut off

--- a/centro/css/bootstrap.css
+++ b/centro/css/bootstrap.css
@@ -3982,14 +3982,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: transparent;
 }
 .navbar-default .navbar-toggle {
-  border-color: lawngreen;
+  border-color: #bbc86f;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #1a242f;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: lawngreen;
+  background-color: #bbc86f;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
